# Windows-Ai-Assistant

./: .gitignore  README.md  activate.py
Cores/: CommandMapper.py  EmotionLevel.py  GenerateEmotionTTS.py  ModelBehaviour.py  Notification.py  Speech2Text.py  Text2Command.py  Text2Model.py  Text2Speech.py
Modules/: browser.py  launch.py  open.py  talk.py  util.py  window.py
Plugins/: template.py
SimpleGameEngine/: CollisionDetection.py  HitBox.py  KinematicBody.py  OOVPersistence.py  StaticBody.py
SimpleGameEngine/CppSource/: CMakeLists.txt  CollisionDetection.cpp  README.md  example.cpp
Tests/ProofOfConcept/: CAITest.py  CommandMapperVariations.py  CommandSplitter.py  GetGifPalette.py  GetPrograms.py  MultiWordCommand.py  NonFlickerGif.py  NonFlickerGifVariableSpeed.py  TTSAudioControl.py  ThreadingSpeed.py  TransparentImage.py  TransparentWindow.py
Tests/ProofOfConcept/CppSource/: CMakeLists.txt  build.bat  custom.cpp  custom_object.py  example.cpp  test.py
Utilities/SimpleGameEngine/: CollisionDetection.py  RigidBody.py  StageEffect.py
WindowUI/: GifPlayer.py  GifPlayer2.py  Stage.py  Widget.py  root.py
